--- a/index.html
+++ b/index.html
@@ -120,25 +120,7 @@
                 <button popovertarget="popover-specs" class="bg-primary text-black px-6 py-3 hover:bg-blue-800"
                     id="anchor_specs">Ver más</button>
                 <div id="popover-specs" popover>
-                    <product-card>
-                        <template id="card-template">
-                            <article>
-                                <img src="" class="c-img">
-                                <a href="camera.html">
-                                    <h2 class="c-title"></h2>
-                                    <p class="c-short_description"></p>
-                                    <p class="c-price"></p>
-                                </a>
-                                <relative-time class="c-date"></relative-time>
-                                <p class="c-description hidden"></p>
-                                <p class="c-category"></p>
-                                <p id="id" class="hidden c-id"></p>
-                                <div class="px-6 pt-4 pb-2 c-tags">
-                
-                                </div>
-                            </article>
-                        </template>
-                    </product-card>
+                    <product-card></product-card>
                 </div>
                 <button class="add2cart bg-primary text-black px-6 py-3 hover:bg-blue-800">Add to Cart</button>
                 </div>
