--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
                 <div popover id="popover-sc" class="container mx-auto px-6 py-16">
                     <h2 class="text-3xl">Cart</h2>
                    <template id="cart-template">
+                        <img src="" class="img">
+                        <h2 class="title"></h2>
+                        <p class="price"></p>
+
+                   </template>
 		<li class="p-2 w-full border-black border-b my-4">
 			<button class="remove absolute t-0">🗙</button>
 			<a href="">
